[package]
name = "onchain-voting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onchain_voting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
ahash = "0.8.11"

# [patch.crates-io]
# ahash = "0.8.11"
# ahash = { git = "https://github.com/tkaitchuck/aHash", tag = "v0.8.11" }